@@ -1,28 +1,0 @@
-/* This testcase is part of GDB, the GNU debugger.
-
-   Copyright (C) 2010-2018 Free Software Foundation, Inc.
-
-   This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 3 of the License, or
-   (at your option) any later version.
-
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
-
-int
-dummy_2 (int a, int b, int c)
-{
-  return a + b + c;
-}
-
-int
-dummy_3 (int a, int b, int c)
-{
-  return a - b - c;
-}
