@@ -1,0 +1,8 @@
+#include "disasm-multi-cu.h"
+
+int
+main ()
+{
+  function_1 (); /* debug: main */
+  return 0;
+}
