@@ -1,0 +1,7 @@
+#include "disasm-multi-cu.h"
+
+void
+function_1 ()
+{
+  function_2 (); /* debug: function_1 */
+}
